--- a/src/pages/mainScreen/MainScreen.module.scss
+++ b/src/pages/mainScreen/MainScreen.module.scss
@@ -5,10 +5,48 @@
     position: relative;
     // background-color: rgb(246, 229, 205);
 
+    .yield {
+        width: 100%;
+        height: auto;
+        padding-top: 30px;
+
+        .cancel {
+            width: max-content;
+            height: auto;
+            position: absolute;
+            left: 5%;
+            top: 5%;
+            padding: 5px;
+            border-radius: 20px;
+            border: solid 2px rgb(112, 4, 4);
+            // display: flex;
+            // flex-direction: column;
+            // justify-content: center;
+            // align-items: center;
+            p {
+                // width: max-content;
+                font-size: 25px;
+                font-weight: 600;
+                color: rgb(112, 4, 4);
+                font-family: 'Dancing Script', cursive;
+            }
+
+            &:active {
+                opacity: 0.5; /* Điều chỉnh độ mờ của phần tử khi nhấn */
+                color: rgb(171, 82, 82); /* Màu sẽ thay đổi khi nhấn */
+            }
+        }
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
     .logout {
         position: absolute;
         top: 10px;
-        left: 10px;
+        right: 10px;
         width: 70px;
         height: 70px;
         border-radius: 50%;
@@ -21,6 +59,9 @@
             padding-left: 2px;
             width: 60%;
             height: 60%;
+        }
+        &:active {
+            opacity: 0.5; /* Điều chỉnh độ mờ của phần tử khi nhấn */
         }
     }
 
@@ -58,6 +99,10 @@
                 height: 110px;
                 border-radius: 50%;
             }
+            &:active {
+                opacity: 0.5; /* Điều chỉnh độ mờ của phần tử khi nhấn */
+            }
+            touch-action: none;
         }
 
         &__collection {
