--- a/src/pages/mainScreen/CollectionModal/CollectionModal.module.scss
+++ b/src/pages/mainScreen/CollectionModal/CollectionModal.module.scss
@@ -39,8 +39,8 @@
             letter-spacing: 2px;
             .back_btn {
                 position: absolute;
-                width: 50px;
-                height: 50px;
+                width: 45px;
+                height: 45px;
                 top: 50%;
                 left: 1%;
                 border: solid 3px orange;
@@ -61,7 +61,9 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
-            overflow: scroll;
+            overflow-y: scroll;
+            margin-bottom: 5px;
+            border-radius: 20px;
 
             .image_item {
                 flex: 0 0 calc(33.33%);
