--- a/src/pages/mainScreen/MainScreen.module.scss
+++ b/src/pages/mainScreen/MainScreen.module.scss
@@ -8,7 +8,7 @@
     .yield {
         width: 100%;
         height: auto;
-        padding-top: 30px;
+        padding-top: 40px;
 
         .cancel {
             width: max-content;
@@ -25,10 +25,11 @@
             // align-items: center;
             p {
                 // width: max-content;
-                font-size: 25px;
+                font-size: 20px;
                 font-weight: 600;
                 color: rgb(112, 4, 4);
                 font-family: 'Dancing Script', cursive;
+                padding: 2px;
             }
 
             &:active {
@@ -39,7 +40,31 @@
 
         img {
             width: 100%;
-            height: 100%;
+            height: 80%;
+        }
+    }
+
+    .equipment {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 5px;
+        border-radius: 20px;
+        border: solid 2px rgb(112, 4, 4);
+        margin-bottom: 5px;
+        margin: 0 100px;
+
+        p {
+            font-size: 20px;
+            font-weight: 600;
+            color: rgb(112, 4, 4);
+            font-family: 'Dancing Script', cursive;
+            padding: 2px;
+        }
+
+        &:active {
+            opacity: 0.5; /* Điều chỉnh độ mờ của phần tử khi nhấn */
+            color: rgb(171, 82, 82); /* Màu sẽ thay đổi khi nhấn */
         }
     }
 
@@ -67,13 +92,20 @@
 
     .option {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         width: 100%;
-        height: calc(100vh - 85%);
+
         // background-color: red;
         position: absolute;
         bottom: 0;
         margin-bottom: 20%;
+
+        &__wrap {
+            height: 120px;
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+        }
 
         &__book {
             flex: 1;
@@ -102,7 +134,6 @@
             &:active {
                 opacity: 0.5; /* Điều chỉnh độ mờ của phần tử khi nhấn */
             }
-            touch-action: none;
         }
 
         &__collection {
