--- a/src/pages/mainScreen/MainScreen.module.scss
+++ b/src/pages/mainScreen/MainScreen.module.scss
@@ -6,42 +6,16 @@
     // background-color: rgb(246, 229, 205);
 
     .yield {
-        width: 100%;
-        height: auto;
-        padding-top: 40px;
+        width: 100vw;
+        height: calc(100% - 330px);
+        background-color: bisque;
+        overflow: auto;
+    }
 
-        .cancel {
-            width: max-content;
-            height: auto;
-            position: absolute;
-            left: 5%;
-            top: 5%;
-            padding: 5px;
-            border-radius: 20px;
-            border: solid 2px rgb(112, 4, 4);
-            // display: flex;
-            // flex-direction: column;
-            // justify-content: center;
-            // align-items: center;
-            p {
-                // width: max-content;
-                font-size: 20px;
-                font-weight: 600;
-                color: rgb(112, 4, 4);
-                font-family: 'Dancing Script', cursive;
-                padding: 2px;
-            }
-
-            &:active {
-                opacity: 0.5; /* Điều chỉnh độ mờ của phần tử khi nhấn */
-                color: rgb(171, 82, 82); /* Màu sẽ thay đổi khi nhấn */
-            }
-        }
-
-        img {
-            width: 100%;
-            height: 80%;
-        }
+    .yield::-webkit-scrollbar {
+        width: 0.5rem; /* Điều chỉnh độ rộng của thanh cuộn dọc */
+        height: 0.5rem; /* Điều chỉnh độ cao của thanh cuộn ngang */
+        display: none; /* Ẩn thanh cuộn */
     }
 
     .equipment {
@@ -68,25 +42,54 @@
         }
     }
 
-    .logout {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        width: 60px;
-        height: 60px;
-        border-radius: 50%;
-        background-color: rgb(246, 175, 44);
+    .header_btn {
+        width: 100%;
+        height: max-content;
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
+        margin: 20px 0 10px 0;
+        padding: 0 20px;
         align-items: center;
+        .cancel {
+            height: 70%;
+            padding: 5px;
+            border-radius: 20px;
+            border: solid 2px rgb(112, 4, 4);
+            // display: flex;
+            // flex-direction: column;
+            // justify-content: center;
+            // align-items: center;
+            p {
+                // width: max-content;
+                font-size: 20px;
+                font-weight: 600;
+                color: rgb(112, 4, 4);
+                font-family: 'Dancing Script', cursive;
+                padding: 2px;
+            }
 
-        &__img {
-            padding-left: 2px;
-            width: 60%;
-            height: 60%;
+            &:active {
+                opacity: 0.5; /* Điều chỉnh độ mờ của phần tử khi nhấn */
+                color: rgb(171, 82, 82); /* Màu sẽ thay đổi khi nhấn */
+            }
         }
-        &:active {
-            opacity: 0.5; /* Điều chỉnh độ mờ của phần tử khi nhấn */
+        .logout {
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            background-color: rgb(246, 175, 44);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            &__img {
+                padding-left: 2px;
+                width: 60%;
+                height: 60%;
+            }
+            &:active {
+                opacity: 0.5; /* Điều chỉnh độ mờ của phần tử khi nhấn */
+            }
         }
     }
 
