--- a/src/pages/mainScreen/CollectionModal/CollectionModal.module.scss
+++ b/src/pages/mainScreen/CollectionModal/CollectionModal.module.scss
@@ -25,7 +25,7 @@
         .header {
             position: relative;
             background-color: rgb(120, 2, 2);
-            height: 25%;
+            padding: 12px 0;
             width: 100%;
             border-radius: 15px;
             border: 5px solid rgb(120, 2, 2);
@@ -67,6 +67,8 @@
 
             .image_item {
                 flex: 0 0 calc(33.33%);
+                text-align: center;
+                font-size: 12px;
 
                 .img_collection {
                     width: 100%;
