--- a/src/pages/mainScreen/MainScreen.module.scss
+++ b/src/pages/mainScreen/MainScreen.module.scss
@@ -5,14 +5,14 @@
     position: relative;
     // background-color: rgb(246, 229, 205);
 
-    .yield {
+    .map {
         width: 100vw;
-        height: calc(100% - 330px);
+        height: calc(100% - 280px);
         background-color: bisque;
         overflow: auto;
     }
 
-    .yield::-webkit-scrollbar {
+    .map::-webkit-scrollbar {
         width: 0.5rem; /* Điều chỉnh độ rộng của thanh cuộn dọc */
         height: 0.5rem; /* Điều chỉnh độ cao của thanh cuộn ngang */
         display: none; /* Ẩn thanh cuộn */
@@ -50,6 +50,13 @@
         margin: 20px 0 10px 0;
         padding: 0 20px;
         align-items: center;
+
+        .name {
+            font-size: 35px;
+            font-weight: 600;
+            color: rgb(112, 4, 4);
+            font-family: 'Dancing Script', cursive;
+        }
         .cancel {
             height: 70%;
             padding: 5px;
