--- a/src/pages/mainScreen/RequipmentModal/RequipmentModal.module.scss
+++ b/src/pages/mainScreen/RequipmentModal/RequipmentModal.module.scss
@@ -61,17 +61,15 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
-            overflow-y: scroll;
-            margin-top: 5px;
+            width: 100%;
+            height: 100%;
+            align-items: center;
+            padding: 30px;
 
-            .image_item {
-                flex: 0 0 calc(33.33%);
-                text-align: center;
-                font-size: 12px;
-                .img_collection {
-                    width: 100%;
-                    height: auto;
-                }
+            .template {
+                background-color: aqua;
+                width: 100%;
+                height: 100%;
             }
         }
     }
