--- a/src/pages/mainScreen/YieldModal/YieldModal.module.scss
+++ b/src/pages/mainScreen/YieldModal/YieldModal.module.scss
@@ -61,16 +61,46 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
-            overflow-y: scroll;
-            margin-top: 5px;
+            width: 100%;
+            height: 100%;
+            align-items: center;
+            padding: 20px;
 
-            .image_item {
-                flex: 0 0 calc(33.33%);
-                text-align: center;
-                font-size: 12px;
-                .img_collection {
-                    width: 100%;
-                    height: auto;
+            .template {
+                background-color: aqua;
+                width: 100%;
+                height: 85%;
+            }
+
+            .option_btn {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                height: 20%;
+                width: 100%;
+                padding: 0 30px;
+
+                .cancel {
+                    padding: 5px;
+                    border-radius: 20px;
+                    border: solid 2px rgb(112, 4, 4);
+                    // display: flex;
+                    // flex-direction: column;
+                    // justify-content: center;
+                    // align-items: center;
+                    p {
+                        // width: max-content;
+                        font-size: 20px;
+                        font-weight: 600;
+                        color: rgb(112, 4, 4);
+                        font-family: 'Dancing Script', cursive;
+                        padding: 2px;
+                    }
+
+                    &:active {
+                        opacity: 0.5; /* Điều chỉnh độ mờ của phần tử khi nhấn */
+                        color: rgb(171, 82, 82); /* Màu sẽ thay đổi khi nhấn */
+                    }
                 }
             }
         }
