--- a/src/pages/mainScreen/YieldModal/YieldModal.module.scss
+++ b/src/pages/mainScreen/YieldModal/YieldModal.module.scss
@@ -70,6 +70,11 @@
                 background-color: aqua;
                 width: 100%;
                 height: 85%;
+
+                .img_yield {
+                    width: 100%;
+                    height: 100%;
+                }
             }
 
             .name_yield {
