--- a/src/pages/mainScreen/YieldModal/YieldModal.module.scss
+++ b/src/pages/mainScreen/YieldModal/YieldModal.module.scss
@@ -59,17 +59,23 @@
 
         .colection {
             display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
             width: 100%;
             height: 100%;
             align-items: center;
-            padding: 20px;
 
             .template {
-                background-color: aqua;
-                width: 100%;
-                height: 85%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                // background-color: aqua;
+                width: 280px;
+                height: auto;
+                display: flex;
+                justify-content: center;
+                align-items: center;
 
                 .img_yield {
                     width: 100%;
@@ -93,7 +99,7 @@
                 align-items: center;
                 height: max-content;
                 width: 100%;
-                padding: 0 30px;
+                padding: 0 60px;
 
                 .cancel {
                     padding: 5px;
