--- a/src/pages/mainScreen/RequipmentModal/RequipmentModal.module.scss
+++ b/src/pages/mainScreen/RequipmentModal/RequipmentModal.module.scss
@@ -59,17 +59,40 @@
 
         .colection {
             display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
             width: 100%;
             height: 100%;
             align-items: center;
-            padding: 30px;
 
             .template {
-                background-color: aqua;
+                position: relative;
+
                 width: 100%;
-                height: 100%;
+                height: auto;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                .img_ao {
+                    position: absolute;
+                    width: 100%;
+                    height: auto;
+                    z-index: 1000;
+                }
+
+                .img_vay {
+                    position: absolute;
+                    width: 100%;
+                    height: auto;
+                    z-index: 200;
+                }
+                .img_non {
+                    position: absolute;
+                    width: 100%;
+                    height: auto;
+                }
             }
         }
     }
