--- a/src/pages/mainScreen/MainScreen.module.scss
+++ b/src/pages/mainScreen/MainScreen.module.scss
@@ -107,7 +107,7 @@
 
         // background-color: red;
         position: absolute;
-        bottom: 0;
+        bottom: 10px;
         margin-bottom: 20%;
 
         &__wrap {
