--- a/src/pages/mainScreen/YieldModal/YieldModal.module.scss
+++ b/src/pages/mainScreen/YieldModal/YieldModal.module.scss
@@ -8,6 +8,7 @@
     z-index: 999;
 
     &_modal {
+        position: fixed;
         top: 45%;
         left: 50%;
         transform: translate(-50%, -50%);
@@ -126,6 +127,7 @@
     }
 
     .confirmModal {
+        position: fixed;
         top: 45%;
         left: 50%;
         transform: translate(-50%, -50%);
@@ -133,8 +135,9 @@
         border: 5px solid rgb(255, 174, 23);
         border-radius: 20px;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
-        z-index: 1000;
+        z-index: 100000;
         width: 90%;
+        height: 67%;
         display: flex;
         flex-direction: column;
     }
