--- a/src/pages/mainScreen/YieldModal/YieldModal.module.scss
+++ b/src/pages/mainScreen/YieldModal/YieldModal.module.scss
@@ -99,6 +99,7 @@
                 height: max-content;
                 width: 100%;
                 padding: 0 60px;
+                padding-bottom: 20px;
 
                 .cancel {
                     padding: 5px;
