--- a/src/pages/mainScreen/CollectionModal/CollectionModal.module.scss
+++ b/src/pages/mainScreen/CollectionModal/CollectionModal.module.scss
@@ -64,6 +64,7 @@
             overflow-y: scroll;
             margin-bottom: 5px;
             border-radius: 20px;
+            margin-top: 10px;
 
             .image_item {
                 flex: 0 0 calc(33.33%);
