--- a/src/pages/mainScreen/BookModal/BookModal.module.scss
+++ b/src/pages/mainScreen/BookModal/BookModal.module.scss
@@ -62,12 +62,16 @@
             flex-wrap: wrap;
             justify-content: space-between;
             overflow-y: scroll;
-            margin-top: 5px;
+            margin-top: 10px;
 
             .image_item {
                 flex: 0 0 calc(33.33%);
                 text-align: center;
                 font-size: 12px;
+                padding: 2px;
+                // box-shadow: 0px 0px 2px rgb(211, 211, 211);
+                // border-radius: 10px;
+                // margin-top: 5px;
                 .img_collection {
                     width: 100%;
                     height: auto;
