--- a/src/pages/mainScreen/YieldModal/YieldModal.module.scss
+++ b/src/pages/mainScreen/YieldModal/YieldModal.module.scss
@@ -132,7 +132,7 @@
         top: 45%;
         left: 50%;
         transform: translate(-50%, -50%);
-        background-color: rgb(255, 255, 255);
+        background-color: rgba(46, 46, 46, 0.367);
         border: 5px solid rgb(255, 174, 23);
         border-radius: 20px;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
@@ -141,6 +141,21 @@
         height: 67%;
         display: flex;
         flex-direction: column;
+        padding: 30px;
+        justify-content: center;
+        align-items: center;
+
+        .wrap_btn {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+
+            button {
+                padding: 10px;
+                border: 1px solid orange;
+                border-radius: 10px;
+            }
+        }
     }
 }
 
