--- a/src/pages/mainScreen/MainScreen.module.scss
+++ b/src/pages/mainScreen/MainScreen.module.scss
@@ -10,6 +10,11 @@
         height: calc(100% - 300px);
         background-color: bisque;
         overflow: auto;
+
+        .video {
+            width: 100%;
+            height: 100%;
+        }
     }
 
     .map::-webkit-scrollbar {
