--- a/src/pages/mainScreen/YieldModal/YieldModal.module.scss
+++ b/src/pages/mainScreen/YieldModal/YieldModal.module.scss
@@ -157,5 +157,30 @@
             }
         }
     }
+
+    .notification {
+        position: fixed;
+        top: 45%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border-radius: 20px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+        z-index: 1000;
+        width: 60%;
+        background-color: rgb(200, 126, 0);
+        display: flex;
+        flex-direction: column;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 10%;
+
+        p {
+            color: white;
+            font-size: 25px;
+            font-weight: 500;
+            font-family: 'Dancing Script', cursive;
+        }
+    }
 }
 
